# Simple-torrent

./: .gitignore  Makefile  check_script.sh  checksum.py  readme.md  requirements.txt
torrent-client-prototype/: CMakeLists copy.txt  CMakeLists.txt  bencode.cpp  bencode.h  byte_tools.cpp  byte_tools.h  integrityChecker.cpp  integrityChecker.h  main.cpp  message.cpp  message.h  peer_connect.cpp  peer_connect.h  piece.cpp  piece.h  piece_storage.cpp  piece_storage.h  readme.md  tcp_connect.cpp  tcp_connect.h  torrent_file.cpp  torrent_file.h  torrent_tracker.cpp  torrent_tracker.h  userIO.cpp  userIO.h
